# vibemap

./: .gitignore  .vercelignore  Makefile  README.md  docker-compose.yml  requirements.txt  vercel.json
backend/: .env  embeddings.py  index.py  main.py  mcp_server.py  pyproject.toml  qdrant_client.py  recommender.py  requirements-dev.txt  requirements.txt  spotify.py  spotify_endpoints.md  vercel.json
backend/.vercel/: project.json
backend/agent/: mcp_agent.py  schemas.py  session_state.py
backend/api/: auth.py
backend/core/: config.py
backend/services/: embeddings.py  hugging_face.py  ingest.py  qdrant.py  spotify.py
backend/tools/: music_tools.py  registry.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/src/: App.tsx  types.ts
frontend/src/styles/: style.css
scripts/: debug_music.py  debug_spotify.py  scaffold.py
